--- a/index.html
+++ b/index.html
@@ -32,9 +32,30 @@
         <audio id="som">
             <source src="audio/djhenriquemg-pompeii-ae47e5.mp3" type="audio/mp3">
         </audio>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Página com Vídeo de Fundo</title>
+        <style>
+            /* Estilos para garantir que o vídeo ocupe toda a tela */
+        </style>
+        </head>
+
+        <body>
+
+            <!-- Vídeo de fundo -->
+            <video autoplay muted loop>
+                <source src="vídeo/4457845-uhd_3840_2160_24fps.mp4" type="video/mp4">
+            </video>
+
+            
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+             <title>Botão com Efeito de Clique</title>
+    
+
+
+
 
     </main>
     <script src="app.js"></script>
-</body>
 
 </html>
